		huge dumps after a 'fatal' or 'panic' occurs during
		simulation. Instead, this dump is controlled by the
		'-debug:error' parameter.

2009-09-23
	* cachesystem.c: bug fixed that prevented the cache block size
		to be changed in the cache configuration file. New check
		added in the configuration file analysis, which does not
		allow block sizes greater than page sizes.

2009-10-26
	Cache blocks of different sizes allowed for different caches.
	This allows the key BlockSize to be specified in the cache config
	files individually for each cache and main memory. The MOESI
	protocol schemes have also been changed in the documentation
	project.

	* mmu.c: parameter '-page_size' to change the memory page size.
		The constants MMU_PAGE_SIZE, MMU_LOG_PAGE_SIZE, and
		MMU_PAGE_MASK have been converted into variables.

2009-11-03
	Validation Buffer architecture removed. Option '-arch' removed.

2009-11-03
	The register renaming mechanism with 'valid_remapping', 'pending_readers',
	and 'completed' fields is simplified to work on a plain ROB-based
	architecture.

	* phregs.c: new register renaming scheme designed to efficiently
		manage x86 flags ZF, PF, SF, OF, CF, DF. Each physical register
		attaches these flags, instead of making them occupy full
		additional registers.

2009-11-04
	* queues.c, phregs.c: default parameters did not make much sense. They
		have been changed to: RF=80, ROB=64, IQ=40, LQ=20, SQ=20.

2009-11-05
	* bpred.c: branch prediction redesigned and a new implementation made.
		The new design allows for multiple branch prediction. It has
		been documented in the m2s-doc project.

2009-11-06
	* decode.c: new pipeline stage that decouples instruction decode from
		instruction fetch.
	* fetch.c: processor front-end redesigned and reimplemented with
		a detailed documentation in the m2s-doc project.
		Fetch policies made code at fetch too complex. They are
		removed for the next version.

2009-11-23
	Version 2.2 Released
